--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,14 @@
 <html>
 
 <head>
-	<script src="script.js"></script>
-	<script>
-		window.addEventListener("load", main);
-	</script>
+    <title>EFT Maps</title>
+    <script src="script.js"></script>
+    <script>
+        window.addEventListener("load", main);
+    </script>
 </head>
+
 <body>
 </body>
+
 </html>
