typescript rw WIP, add UIElement, ImageOption

--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,20 @@
 <html>
 
 <head>
-    <script src="script.js"></script>
-    <script>
-        window.addEventListener("load", main);
-    </script>
+    <script data-main="ts/main" src="require.js"></script>
+    <style>
+        body {
+            background: #17202A
+        }
+
+        #loading_header {
+            color: white
+        }
+    </style>
 </head>
 
 <body>
+    <h3 id="loading_header">Loading ...</h3>
 </body>
 
 </html>
