--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <title>EFT Dash</title>
     <script data-main="ts/main" src="require.js"></script>
     <style>
         body {
