--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,10 @@
         #loading_header {
             color: white
         }
+
+        :visited {
+            color: white
+        }
     </style>
 </head>
 
