--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,9 @@
     <script data-main="ts/main" src="require.js"></script>
     <style>
         body {
-            background: #17202A
+            margin: 0;
+            background: #17202A;
+            overflow-y: hidden;
         }
 
         h1,
@@ -18,6 +20,10 @@
 
         :visited {
             color: white
+        }
+
+        #loading_header {
+            position: absolute;
         }
     </style>
 </head>
