--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,10 @@
             color: white
         }
 
+        a {
+            color: white
+        }
+
         :visited {
             color: white
         }
