--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,7 @@
 
 <head>
     <title>EFT Dash</title>
-    <script>
-        window.addEventListener("load", () => {
-            console.log("yo")
-            let script = document.createElement("script")
-            script["src"] = "bundle.js"
-            script.setAttribute("url", script["src"])
-            document.head.appendChild(script)
-        })
-    </script>
+    <script src="bundle.js"></script>
     <style>
         body {
             margin: 0;
@@ -31,7 +23,7 @@
             color: white
         }
         
-         :visited {
+        a:visited {
             color: white
         }
         
